--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <title>Zag Metrics</title>
-    <link rel="stylesheet" href="/css/index.css"/>
+    <link rel="stylesheet" href="css/index.css"/>
     <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
   </head>
   <body>
@@ -28,30 +28,30 @@
       <div class="features">
         <div class="feature-row">
           <div class="feature">
-            <img src="/images/snaps/histogram.png"/>
+            <img src="images/snaps/histogram.png"/>
             <p>Plot counters and histograms</p>
           </div>
           <div class="feature">
-            <img src="/images/snaps/dashboard.png"/>
+            <img src="images/snaps/dashboard.png"/>
             <p>Dashboards</p>
           </div>
           <div class="feature">
-            <img src="/images/snaps/live.png"/>
+            <img src="images/snaps/live.png"/>
             <p>Real-time metrics</p>
           </div>
         </div>
 
         <div class="feature-row">
           <div class="feature">
-            <img src="/images/snaps/heat-map.png"/>
+            <img src="images/snaps/heat-map.png"/>
             <p>Heat maps</p>
           </div>
           <div class="feature">
-            <img src="/images/snaps/tags.png"/>
+            <img src="images/snaps/tags.png"/>
             <p>Tag events</p>
           </div>
           <div class="feature">
-            <img src="/images/snaps/tree-expanded.png"/>
+            <img src="images/snaps/tree-expanded.png"/>
             <p>Navigate thousands of keys</p>
           </div>
         </div>
