--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ $ zag/bin/admin.js tagtype create '#0000ff' 'Client release'</pre></code>
           <code><pre>$ zag/bin/admin.js tag create '#0000ff' 'release 0.12.4' 1393429946985</pre></code>
           <p>
             or in the web UI. To create a tag in the web UI, right-click on the X axis of a graph.
-            Left-clicking a tag on the axis to modify it.
+            Left-click a tag on the axis to modify it.
           </p>
         </div>
 
