--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <a class="header-link" href="https://github.com/voxer/zag">source</a>
           <a class="header-link" href="https://github.com/voxer/zag/issues">bugs</a>
         </div>
-        <a class="header-link header-title" href="/">zag metrics</a>
+        <a class="header-link header-title" href="#">zag metrics</a>
       </div>
 
       <div class="summary">
