--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <div class="summary">
         <p>
-          Zag is a fast, scalable Node.js application for aggregating and visualizing
+          Zag is a fast, scalable Node.js application for aggregating and visualizing both
           real-time and historical metrics.
         </p>
       </div>
@@ -76,7 +76,7 @@ zag-web listening on 0.0.0.0:8875
 zag-daemon pool: [&quot;127.0.0.1:8876&quot;]
 </code></pre><p>The first time you run it, wait a minute for the key list to populate
 with the first data points.
-Then, point your browser to the address the script printed.</p>
+Next, point your browser to the address the script printed.</p>
 <p>Now you&#39;re ready to start sending metrics data using <a href="https://github.com/Voxer/zag/tree/master/agent">zag-agent</a>.</p>
 <pre><code>$ npm install zag-agent
 </code></pre><p>then:</p>
@@ -155,11 +155,11 @@ and manages ancillary data such as tags and dashboards.</li>
             and <code>|</code> as separators. Metrics sent with invalid keys are silently ignored.
           </p>
           <p>
-            In <code>A|B</code>, A is an aggregate key, which means that every point that
+            In <code>A|B</code>, <code>A</code> is an aggregate key, which means that every point that
             gets sent to <code>A|B</code>, <code>A|C</code>, etc
             will also automatically be forwarded to <code>A</code>.
           </p>
-          <p>In <code>A&gt;B</code>, A has no points associated with it, it is just a scope in the tree widget.</p>
+          <p>In <code>A&gt;B</code>, <code>A</code> has no points associated with it, it is just a scope in the tree widget.</p>
         </div>
         <div class="feature feature-png"><img class="feature-image" src="images/snaps/tree-expanded.png" alt="Navigate thousands of keys"/><p class="feature-label">Navigate thousands of keys</p></div>
 
@@ -183,7 +183,7 @@ and manages ancillary data such as tags and dashboards.</li>
         <div class="col-1">
           <p>
             By default, the interval is relative, e.g. if the last 6 hours are plotted
-            and you reload the graph it will still be the last 6 hours. To link to a fixed
+            and you reload the graph, it will still be the last 6 hours. To link to a fixed
             range, go to <em>&equiv;/Permalink</em>.
           </p>
           <p>Intervals selected from the "minutes" row of the range selector will be live.</p>
@@ -215,11 +215,11 @@ and manages ancillary data such as tags and dashboards.</li>
         <div class="col-2">
           <p>
             A tag marks an event globally, across all metrics. For example, you may mark
-            server releases so that metrics that change can be correlated to it after the fact.
+            server releases so that metrics that change can be correlated after the fact.
           </p>
           <p>Each tag contains the following fields:</p>
           <ul>
-            <li><code>id</code>    - Unique identifier for the tag, of the form <code>{time}_{random}</code>.</li>
+            <li><code>id</code>    - Unique identifier for the tag, in the form of <code>{time}_{random}</code>.</li>
             <li><code>ts</code>    - Timestamp marking the tag's location.</li>
             <li><code>label</code> - Some text specific to this tag describing the event that it marks.</li>
             <li><code>color</code> - A hex color, e.g. <code>#f00</code>.</li>
